# yacht-anki

./: .docker.env.example  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.claude/plans/: immutable-sniffing-hippo-agent-abb2e1cabc4def360.md
backend/: AGENTS.md  Dockerfile  config.py  dev.py  main.py
backend/auth/: access.py  passwords.py  routes.py  tokens.py
backend/db/: AGENTS.md  builtin_content.py  card_states.py  cards.py  connection.py  decks.py  migrations.py  notes.py  refresh_sessions.py  review_log.py  seed.py  sqlite_time.py  stats.py  user_settings.py  users.py
backend/http/: admin_routes.py  deck_routes.py  json_api.py  middleware.py  review_routes.py  routes.py  settings_routes.py  stats_routes.py
backend/migrations/: 001_create_users.py  002_create_refresh_sessions.py  003_create_notes.py  004_drop_notes_table.py  005_create_decks.py  006_create_cards.py  007_create_card_states.py  008_create_review_log.py  010_add_card_slug.py  (+3 more)
content/: README.md  manoeuvres.json  right-of-way.json  terms.json
docs/: AGENTS.md  phase01.md  phase02.md  phase03.md  phase04.md  phase05.md  phase06.md  phase07.md  phase08.md  v1.md  v2.md
frontend/: AGENTS.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  playwright.config.ts  playwright.docker.config.js  playwright.docker.config.ts  prettier.config.cjs  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts  vitest.setup.ts
(+77 files in other folders)
